--- a/src/styles/pages/MyLinks.css
+++ b/src/styles/pages/MyLinks.css
@@ -1,4 +1,6 @@
-.user-title{
+/*MyLinks.css*/
+
+.user-link{
     display: flex;
     flex-direction: column;
     align-items: center;
